use specific openid version

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ejs":"",
     "jade":"",
     "sprintf":"",
-    "openid":"",
+    "openid":"0.1.5",
     "cookies":"",
     "keygrip":"",
     "jade":"",
